--- a/Metro/Metro.vcxproj.filters
+++ b/Metro/Metro.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="carriages.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="objects.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="train_ceiling.bmp">
