--- a/Metro/Metro.vcxproj.filters
+++ b/Metro/Metro.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="3DTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Axis_control.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="train_ceiling.bmp">
