--- a/Metro/Metro.vcxproj.filters
+++ b/Metro/Metro.vcxproj.filters
@@ -178,5 +178,14 @@
     <Image Include="top.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\..\..\..\Pictures\images\d\train.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\..\..\..\Pictures\images\d\cabin_train.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\..\..\..\Pictures\images\d\cabinn_train.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
